--- a/public/resume.html
+++ b/public/resume.html
@@ -3,76 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Reed McFadden – Resume</title>
-<style>
-  body {
-    font-family: Arial, sans-serif;
-    margin: 32px auto;
-    max-width: 750px;
-    color: #222;
-    line-height: 1.3;
-  }
-
-  h1 {
-    font-size: 28px;
-    margin-bottom: 2px;
-    color: #222;
-  }
-
-  h2 {
-    margin-top: 18px;
-    margin-bottom: 6px;
-    font-size: 17px;
-    font-weight: bold;
-    border-bottom: 1px solid #ccc;
-    padding-bottom: 2px;
-    color: #222;
-  }
-
-  .meta {
-    color: #555;
-    margin-bottom: 14px;
-    font-size: 14px;
-  }
-
-  p {
-    margin: 2px 0 2px 0;
-    color: #222;
-  }
-
-  /* ⭐ Increased spacing between job sections (just a bit more than before) */
-  ul {
-    padding-left: 18px;
-    margin: 10px 0 16px 0;
-  }
-
-  li {
-    margin: 2px 0;
-    padding: 0;
-    color: #222;
-  }
-
-  .job-title {
-    font-weight: bold;
-    margin-bottom: 0;
-    color: #222;
-  }
-
-  .company {
-    color: #555;
-    font-size: 14px;
-    margin-top: 0;
-    margin-bottom: 2px;
-  }
-
-  .dates {
-    float: right;
-    color: #555;
-    font-size: 13px;
-    margin-top: 0;
-    margin-bottom: 0;
-  }
-</style>
-
+<link rel="stylesheet" href="resume.css">
 </head>
 <body>
 
