add education school and correct dates
Signed-off-by: Reed McFadden <reed.mcfadden@gmail.com>

--- a/public/resume.html
+++ b/public/resume.html
@@ -65,7 +65,8 @@
 </ul>
 
 <h2>Education</h2>
-<p>B.S. in Computer Science — 2018</p>
+<p>Utah Valley University</p>
+<p>B.S. in Computer Science — 2020</p>
 
 </body>
 </html>
