add masters education to resume.html
Signed-off-by: Reed McFadden <reed.mcfadden@gmail.com>

--- a/public/resume.html
+++ b/public/resume.html
@@ -65,6 +65,9 @@
 </ul>
 
 <h2>Education</h2>
+<p>Southern Arkansas University</p>
+<p>M.S. in Computer and Information Science — Expected Dec 2025</p>
+
 <p>Utah Valley University</p>
 <p>B.S. in Computer Science — 2020</p>
 
