update qualifications section
Signed-off-by: Reed McFadden <reed.mcfadden@gmail.com>

--- a/public/resume.html
+++ b/public/resume.html
@@ -13,13 +13,13 @@
 <h2>Summary</h2>
 <p>DevOps/Linux engineer skilled in automation, secure infrastructure, and cloud technologies. Experienced with RHEL, Ansible, virtualization platforms, and DoD secure environments.</p>
 
-<h2>Skills</h2>
+<h2>Qualifications</h2>
 <ul>
-  <li>Linux (RHEL, SELinux)</li>
-  <li>Ansible, Git, CI/CD</li>
-  <li>Docker/Podman</li>
-  <li>AWS, KVM, VMware, Proxmox</li>
-  <li>STIGs, PKI, security hardening</li>
+  <li>Clearance: TS/SCI</li>
+  <li>Certificates: Red Hat Certified Engineer (RHCE), Red hat Certified System Administrator (RHCSA), CompTIA Security+, AWS Cloud Practitioner</li>
+  <li>Operating Systems and Virtualization: Linux (RHEL, Rocky), VMWare vSphere, VMWare ESXi, Docker, KVM, Podman, Proxmox</li>
+  <li>Automation and Scripting: Ansible, YAML, Git, Bash, CI/CD</li>
+  <li>Security and Compliance: STIGs, SELinux, PKI, security hardening</li>
 </ul>
 
 <h2>Experience</h2>
