bold qualifications labels. add education blocks for spacing
Signed-off-by: Reed McFadden <reed.mcfadden@gmail.com>

--- a/public/resume.html
+++ b/public/resume.html
@@ -15,16 +15,16 @@
 
 <h2>Qualifications</h2>
 <ul>
-  <li>Clearance: TS/SCI</li>
-  <li>Certificates: Red Hat Certified Engineer (RHCE), Red hat Certified System Administrator (RHCSA), CompTIA Security+, AWS Cloud Practitioner</li>
-  <li>Operating Systems and Virtualization: Linux (RHEL, Rocky), VMWare vSphere, VMWare ESXi, Docker, KVM, Podman, Proxmox</li>
-  <li>Automation and Scripting: Ansible, YAML, Git, Bash, CI/CD</li>
-  <li>Security and Compliance: STIGs, SELinux, PKI, security hardening</li>
+  <li><strong>Clearance:</strong> TS/SCI</li>
+  <li><strong>Certificates:</strong> Red Hat Certified Engineer (RHCE), Red Hat Certified System Administrator (RHCSA), CompTIA Security+, AWS Cloud Practitioner</li>
+  <li><strong>Operating Systems and Virtualization:</strong> Linux (RHEL, Rocky), VMWare vSphere, VMWare ESXi, Docker, KVM, Podman, Proxmox</li>
+  <li><strong>Automation and Scripting:</strong> Ansible, YAML, Git, Bash, CI/CD</li>
+  <li><strong>Security and Compliance:</strong> STIGs, SELinux, PKI, security hardening</li>
 </ul>
 
 <h2>Experience</h2>
 
-<div class="dates">2023 – Present</div>
+<div class="dates">September 2025 – Present</div>
 <p class="job-title">Linux Engineer</p>
 <p class="company">General Dynamics Mission Systems (GDMS)</p>
 <ul>
@@ -32,31 +32,31 @@
   <li>Implemented configuration and monitoring improvements.</li>
 </ul>
 
-<div class="dates">2022 – 2023</div>
-<p class="job-title">Linux Engineer</p>
+<div class="dates">March 2025 - June 2025</div>
+<p class="job-title">Principal Systems Administrator</p>
 <p class="company">BAE Systems</p>
 <ul>
   <li>Hardened RHEL systems and performed compliance automation.</li>
   <li>Supported secure workstation configuration workflows.</li>
 </ul>
 
-<div class="dates">2021 – 2022</div>
-<p class="job-title">Systems Administrator</p>
+<div class="dates">September 2024 - February 2025</div>
+<p class="job-title">Linux Administrator</p>
 <p class="company">Stratascorp</p>
 <ul>
   <li>Performed RHEL STIG scanning, patching, and remediation.</li>
   <li>Maintained DoD server configurations and reporting.</li>
 </ul>
 
-<div class="dates">2020 – 2021</div>
-<p class="job-title">Software Engineer</p>
+<div class="dates">August 2022 - March 2024</div>
+<p class="job-title">Software Engineer II</p>
 <p class="company">Assured Information Security (AIS)</p>
 <ul>
   <li>Developed hardened Linux workstation components.</li>
   <li>Built log-forwarding tools in Go/Python for secure systems.</li>
 </ul>
 
-<div class="dates">2019 – 2020</div>
+<div class="dates">July 2020 - August 2022</div>
 <p class="job-title">Computer Scientist</p>
 <p class="company">United States Air Force</p>
 <ul>
@@ -65,11 +65,15 @@
 </ul>
 
 <h2>Education</h2>
-<p>Southern Arkansas University</p>
-<p>M.S. in Computer and Information Science — Expected Dec 2025</p>
+<div  class="education-block">
+  <p>Southern Arkansas University</p>
+  <p>M.S. in Computer and Information Science — Expected Dec 2025</p>
+</div>
 
-<p>Utah Valley University</p>
-<p>B.S. in Computer Science — 2020</p>
+<div  class="education-block">
+  <p>Utah Valley University</p>
+  <p>B.S. in Computer Science — 2020</p>
+</div>
 
 </body>
 </html>
