move clearance to headline, rename qualification to technical skills. add skills line for monitoring and observability
Signed-off-by: Reed McFadden <reed.mcfadden@gmail.com>

--- a/public/resume.html
+++ b/public/resume.html
@@ -79,21 +79,22 @@ li {
 <body>
 
 <h1>Reed McFadden</h1>
-<div class="meta">linkedin.com/in/reed-mcfadden - github.com/reedmcfadden</div>
+<div class="meta">TS/SCI • linkedin.com/in/reed-mcfadden • github.com/reedmcfadden</div>
 
 <h2>Summary</h2>
 <p>DevOps/Linux engineer specializing in automation, secure infrastructure, and cloud systems. Experienced with RHEL, Ansible, Terraform, AWS, GitLab CI/CD, virtualization platforms, and DoD secure environments. Passionate about building reliable, hardened, automated Linux systems.
 </p>
 
-<h2>Qualifications</h2>
+<h2>Technical Skills</h2>
 <ul>
-  <li><strong>Clearance:</strong> TS/SCI</li>
   <li><strong>Certificates:</strong> Red Hat Certified Engineer (RHCE), Red Hat Certified System Administrator (RHCSA), CompTIA Security+, AWS Cloud Practitioner</li>
   <li><strong>Operating Systems &amp; Virtualization:</strong> Linux (RHEL, Rocky), VMWare vSphere, VMWare ESXi, Docker, KVM, Podman, Proxmox</li>
   <li><strong>Automation &amp; Scripting:</strong> Ansible, YAML, Git, Bash, CI/CD</li>
   <li><strong>Cloud &amp; Infrastructure as Code:</strong> AWS, Terraform, GitLab CI/CD, cloud automation</li>
 
   <li><strong>Security &amp; Compliance:</strong> STIGs, SELinux, PKI, security hardening</li>
+  <li><strong>Monitoring & Observability:</strong> Grafana, Loki, Promtail, Telegraf, InfluxDB</li>
+
 </ul>
 
 <h2>Experience</h2>
