add github page to headline
Signed-off-by: Reed McFadden <reed.mcfadden@gmail.com>

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ li {
 <body>
 
 <h1>Reed McFadden</h1>
-<div class="meta">TS/SCI • linkedin.com/in/reed-mcfadden • github.com/reedmcfadden</div>
+<div class="meta">TS/SCI • linkedin.com/in/reed-mcfadden • github.com/reedmcfadden • reedmcfadden.github.io/resume</div>
 
 <h2>Summary</h2>
 <p>DevOps/Linux engineer specializing in automation, secure infrastructure, and cloud systems. Experienced with RHEL, Ansible, Terraform, AWS, GitLab CI/CD, virtualization platforms, and DoD secure environments. Passionate about building reliable, hardened, automated Linux systems.
