remove skills labels
Signed-off-by: Reed McFadden <reed.mcfadden@gmail.com>

--- a/index.html
+++ b/index.html
@@ -87,14 +87,12 @@ li {
 
 <h2>Technical Skills</h2>
 <ul>
-  <li><strong>Certificates:</strong> Red Hat Certified Engineer (RHCE), Red Hat Certified System Administrator (RHCSA), CompTIA Security+, AWS Cloud Practitioner</li>
-  <li><strong>Operating Systems &amp; Virtualization:</strong> Linux (RHEL, Rocky), VMWare vSphere, VMWare ESXi, Docker, KVM, Podman, Proxmox</li>
-  <li><strong>Automation &amp; Scripting:</strong> Ansible, YAML, Git, Bash, CI/CD</li>
-  <li><strong>Cloud &amp; Infrastructure as Code:</strong> AWS, Terraform, GitLab CI/CD, cloud automation</li>
-
-  <li><strong>Security &amp; Compliance:</strong> STIGs, SELinux, PKI, security hardening</li>
-  <li><strong>Monitoring & Observability:</strong> Grafana, Loki, Promtail, Telegraf, InfluxDB</li>
-
+  <li>Red Hat Certified Engineer (RHCE), Red Hat Certified System Administrator (RHCSA), CompTIA Security+, AWS Cloud Practitioner</li>
+  <li>Linux (RHEL, Rocky), VMWare vSphere, VMWare ESXi, Docker, KVM, Podman, Proxmox</li>
+  <li>Ansible, YAML, Git, Bash, CI/CD</li>
+  <li>AWS, Terraform, GitLab CI/CD, cloud automation</li>
+  <li>STIGs, SELinux, PKI, security hardening</li>
+  <li>Grafana, Loki, Promtail, Telegraf, InfluxDB</li>
 </ul>
 
 <h2>Experience</h2>
