--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ li {
 </ul>
 
 <h2>Education</h2>
-<div class="dates">Expected December 2025</div>
+<div class="dates">Expected: December 2025</div>
 <div  class="education-block">
   <p><strong>Southern Arkansas University</strong></p>
   <p>M.S. in Computer and Information Science</p>
@@ -147,7 +147,7 @@ li {
 <div class="dates">April 2020</div>
 <div  class="education-block">
   <p><strong>Utah Valley University</strong></p>
-  <p>B.S. in Computer Science (GPA: 3.63)</p>
+  <p>B.S. in Computer Science (GPA: 3.6 / 4.0)</p>
 </div>
 
 </body>
