reword and strengthen resume. add projects section. archive (comment) old irrelevant roles)
Signed-off-by: Reed McFadden <reed.mcfadden@gmail.com>

--- a/index.html
+++ b/index.html
@@ -82,17 +82,17 @@ li {
 <div class="meta">TS/SCI • linkedin.com/in/reed-mcfadden • github.com/reedmcfadden • reedmcfadden.github.io/resume</div>
 
 <h2>Summary</h2>
-<p>DevOps/Linux engineer specializing in automation, secure infrastructure, and cloud systems. Experienced with RHEL, Ansible, Terraform, AWS, GitLab CI/CD, virtualization platforms, and DoD secure environments. Passionate about building reliable, hardened, automated Linux systems.
-</p>
+<p>DevOps/Linux engineer focused on automation, infrastructure-as-code, cloud platforms, and secure Linux systems. Experienced with RHEL, Ansible, Terraform, AWS, CI/CD pipelines, observability tooling, and hardened DoD environments. Passionate about building reliable, scalable, and fully automated infrastructure.</p>
 
 <h2>Technical Skills</h2>
 <ul>
-  <li>Red Hat Certified Engineer (RHCE), Red Hat Certified System Administrator (RHCSA), CompTIA Security+, AWS Cloud Practitioner</li>
-  <li>Linux (RHEL, Rocky), VMWare vSphere, VMWare ESXi, Docker, KVM, Podman, Proxmox</li>
-  <li>Ansible, YAML, Git, Bash, CI/CD</li>
-  <li>AWS, Terraform, GitLab CI/CD, cloud automation</li>
-  <li>STIGs, SELinux, PKI, security hardening</li>
-  <li>Grafana, Loki, Promtail, Telegraf, InfluxDB</li>
+  <li>RHCE, RHCSA, Security+, Linux+, AWS Cloud Practitioner</li>
+  <li>Linux (RHEL, Rocky), virtualization (vSphere, ESXi, KVM, Proxmox), containers (Docker, Podman)</li>
+  <li>Infrastructure-as-Code: Ansible, Terraform, YAML, Git, Bash, Perl</li>
+  <li>CI/CD: GitHub Actions, GitLab CI/CD, artifact pipelines, automated testing workflows</li>
+  <li>AWS: EC2, IAM, VPC, S3, security groups, cloud automation</li>
+  <li>Security &amp; Compliance: STIGs, SELinux, PKI, system hardening, vulnerability remediation</li>
+  <li>Observability: Grafana, Loki, Promtail, Telegraf, InfluxDB</li>
 </ul>
 
 <h2>Experience</h2>
@@ -101,40 +101,70 @@ li {
 <p class="job-title">Linux Engineer</p>
 <p class="company">General Dynamics Mission Systems (GDMS)</p>
 <ul>
-  <li>Maintained and automated secure Linux systems.</li>
-  <li>Implemented configuration and monitoring improvements.</li>
+  <li>Automated provisioning, configuration, and compliance of secure Linux systems using Ansible and scripted workflows.</li>
+  <li>Contributed to configuration management workflows, documentation standards, and peer review processes.</li>
+  <li>Developed automated system and UI validation tests integrated into CI pipelines using Robot Framework and Selenium.</li>
+  <li>Contributed to CI/CD pipeline design, artifact management standards, and automation strategy for testing and infrastructure workflows.</li>
 </ul>
 
 <div class="dates">March 2025 - June 2025</div>
 <p class="job-title">Principal Systems Administrator</p>
 <p class="company">BAE Systems</p>
 <ul>
-  <li>Hardened RHEL systems and performed compliance automation.</li>
-  <li>Supported secure workstation configuration workflows.</li>
+  <li>Coordinated team workflows and reporting, ensuring continuous delivery of infrastructure tasks during team lead absence.</li>
+  <li>Automated the application of quarterly STIG changes across 50 RHEL 8 systems using Ansible, significantly enhancing security posture and reducing compliance time by 80%.</li>
+  <li>Updated fapolicyd trust policies to support secure application execution and access workflows.</li>
+  <li>Implemented SELinux RBAC mappings to enforce identity boundaries and support Kerberos authentication.</li>
+  <li>Diagnosed and remediated vulnerability scanning issues, improving security baseline adherence across RHEL systems.</li>
+  <li>Automated Linux patching workflows using Ansible and Satellite to enforce configuration drift control.</li>
+  <li>Mentored junior Linux administrators, providing guidance and resolving technical blockers to maintain team productivity.</li>
+  <li>Worked with Red Hat IDM and Satellite daily to verify everything was running as expected.</li>
 </ul>
 
 <div class="dates">September 2024 - February 2025</div>
 <p class="job-title">Linux Administrator</p>
 <p class="company">Stratascorp</p>
 <ul>
-  <li>Performed RHEL STIG scanning, patching, and remediation.</li>
-  <li>Maintained DoD server configurations and reporting.</li>
+  <li>Scanned and remediated RHEL 8 STIGs across secure DoD networks.</li>
+  <li>Synchronized RHEL 8 package updates across classified environments to maintain system compliance.</li>
+  <li>Maintained and updated enterprise vulnerability scanning platforms to ensure continuous compliance.</li>
+  <li>Resolved service-level issues impacting security scanning platform availability.</li>
+  <li>Developed standardized automation scripts and scheduled jobs to reduce operational toil and streamline maintenance workflows.</li>
+  <li>Helped with running stig evaluations on multiple servers on classified and unclassified networks and implemented and scripted remediations for automation.</li>
+  <li>Ensured availability of compliance and scanning services by maintaining plugin, service, and update workflows.</li>
+  <li>Improved system reliability by diagnosing NTP drift issues and implementing automated synchronization checks.</li>
+  <li>Performed normal linux server maintenance, including package updates, downtime resolution, and system hardening.</li>
 </ul>
 
 <div class="dates">August 2022 - March 2024</div>
 <p class="job-title">Software Engineer II</p>
 <p class="company">Assured Information Security (AIS)</p>
 <ul>
-  <li>Developed hardened Linux workstation components.</li>
-  <li>Built log-forwarding tools in Go/Python for secure systems.</li>
+  <li>Diagnosed and resolved hardware-integration, kernel, and system-level issues in hardened Linux environments.</li>
+  <li>Completed and booted into Linux From Scratch (LFS) as part of an onboarding challenge.</li>
+  <li>Implemented automated log offloading using Go/Python to ship system logs from hardened Linux endpoints to central logging infrastructure.</li>
+  <li>Coded sections of a desktop application with the backend in Rust, and the frontend in React JavaScript.</li>
+  <li>Diagnosed and resolved virtualization and kernel-level issues on hardened Linux systems.</li>
+  <li>Built reproducible system images using Yocto, BitBake, and containerized build workflows.</li>
+  <li>Automated bootloader configuration and filesystem verification workflows using Perl scripting.</li>
+
 </ul>
 
 <div class="dates">July 2020 - August 2022</div>
 <p class="job-title">Computer Scientist</p>
 <p class="company">United States Air Force</p>
 <ul>
-  <li>Enhanced software supporting fighter aircraft operations.</li>
-  <li>Resolved critical data-processing and system stability issues.</li>
+  <li>Diagnosed and resolved critical data-processing failures in aviation mission-support systems.</li>
+  <li>Implemented updated communication logic to integrate aviation systems with modern radio hardware.</li>
+  <li>Built automated unit and integration tests using C++ and Google Test to reduce manual testing overhead.</li>
+</ul>
+
+<h2>DevOps & Cloud Projects</h2>
+<ul>
+  <li>Built automated configuration and provisioning workflows using <strong>Ansible</strong> roles and playbooks to manage RHEL/Rocky Linux nodes in a multi-machine lab environment.</li>
+  <li>Created CI/CD pipelines using <strong>GitHub Actions</strong> to lint and validate infrastructure code, run automated tests, and publish versioned build artifacts.</li>
+  <li>Built Linux automation scripts (Bash, Python) to reduce manual toil for patching, log management, system validation, and recurring maintenance tasks.</li>
+  <li>Set up a multi-node virtualization lab using <strong>Proxmox/KVM</strong> for testing automation pipelines, configuration management, and infrastructure changes in a controlled environment.</li>
 </ul>
 
 <h2>Education</h2>
@@ -152,4 +182,35 @@ li {
 
 </body>
 </html>
+
+<!-- REMOVED OLDER ROLES AND INFO
+<div class="dates">January 2020 - June 2020</div>
+<p class="job-title">Software QA Engineer</p>
+<p class="company">Micro Focus</p>
+<ul>
+  <li>Worked to convert existing UI test structure to the Page Object Model (POM).</li>
+  <li>Ran and maintained Jenkins pipelines for running test cases and automated manual tests.</li>
+  <li>Scp'd files around and kicked off iso builds when requested by build team.</li>
+  <li>Tested Groovy and Selenium test scripts on openSUSE VM.</li>
+  <li>Reviewed Jenkins pipelines runs and configurations.</li>
+</ul>
+
+<div class="dates">August 2019 - January 2020</div>
+<p class="job-title">Software QA Intern</p>
+<p class="company">Micro Focus</p>
+<ul>
+  <li>Implemented new and fixed existing UI tests using Groovy and Selenium Webdriver.</li>
+</ul>
+
+<div class="dates">May 2019 - August 2019</div>
+<p class="job-title">Computer Scientist Intern</p>
+<p class="company">United States Air Force</p>
+<ul>
+  <li>Created Java unit tests for a radar-data analysis application.</li>
+  <li>Improved and simplified the number formatting and presentation of a Java report generated for the radar application.</li>
+  <li>Learned and participated in agile meetings.</li>
+  <li>Participated in group C++ projects with jet simulation software.</li>
+  <li>Attended and learned Git through training and hands-on usage.</li>
+</ul>
+-->
 
