move dates underneath company, instead of right justified
Signed-off-by: Reed McFadden <reed.mcfadden@gmail.com>

--- a/index.html
+++ b/index.html
@@ -63,12 +63,13 @@ li {
   margin-bottom: 2px;
 }
 
-.dates { 
-  float: right; 
+.dates {
+  font-size: 13px;
+  font-style: italic;
   color: #555;
-  font-size: 13px; 
-  margin-top: 0;
-  margin-bottom: 0;
+  margin: 0 0 6px 0;
+  padding: 0;
+  display: block;
 }
 
 .education-block {
@@ -79,7 +80,7 @@ li {
 <body>
 
 <h1>Reed McFadden</h1>
-<div class="meta">TS/SCI • linkedin.com/in/reed-mcfadden • github.com/reedmcfadden • reedmcfadden.github.io/resume</div>
+<div class="meta">Active TS/SCI • linkedin.com/in/reed-mcfadden • github.com/reedmcfadden • reedmcfadden.github.io/resume</div>
 
 <h2>Summary</h2>
 <p><p>RHCE-certified Linux Engineer with TS/SCI clearance, specializing in secure RHEL enterprise environments, Linux automation, DISA STIG compliance, and classified infrastructure operations. Experienced with Ansible, Satellite/IDM, SELinux policy management, enclave patching workflows, and virtualization platforms. Focused on strengthening mission-critical systems through hardening, configuration automation, and reliable RHEL lifecycle management.</p>
@@ -99,9 +100,9 @@ li {
 
 <h2>Experience</h2>
 
-<div class="dates">September 2025 – Present</div>
 <p class="job-title">Linux Systems and Integration Engineer</p>
 <p class="company">General Dynamics Mission Systems (GDMS)</p>
+<p class="dates">September 2025 – Present</div>
 <ul>
   <li>Configured and validated RHEL-based thick-client workstations according to program baselines and security requirements.</li>
   <li>Assisted with racking, cabling, and initial configuration of lab servers, network switches, and storage equipment for classified test environments.</li>
@@ -111,9 +112,9 @@ li {
   <li>Participated in test automation planning sessions, contributing Linux requirements and validation criteria even though automation efforts were not fully adopted by the team.</li>
 </ul>
 
-<div class="dates">March 2025 - June 2025</div>
 <p class="job-title">Principal Systems Administrator</p>
 <p class="company">BAE Systems</p>
+<p class="dates">March 2025 - June 2025</p>
 <ul>
   <li>Coordinated team workflows and reporting, ensuring continuous delivery of infrastructure tasks during team lead absence.</li>
   <li>Automated the application of quarterly STIG changes across 50 RHEL 8 systems using Ansible, significantly enhancing security posture and reducing compliance time by 80%.</li>
@@ -125,9 +126,9 @@ li {
   <li>Administered Red Hat Satellite and IDM for patch baselining, certificate/identity access, and configuration drift enforcement.</li>
 </ul>
 
-<div class="dates">September 2024 - February 2025</div>
 <p class="job-title">Linux Administrator</p>
 <p class="company">Stratascorp</p>
+<p class="dates">September 2024 - February 2025</p>
 <ul>
   <li>Performed DISA STIG scanning, remediation, and automated hardening of RHEL 8 systems across DoD classified and unclassified enclaves.</li>
   <li>Synchronized RHEL 8 package updates across classified environments to maintain system compliance.</li>
@@ -140,9 +141,9 @@ li {
   <li>Performed normal linux server maintenance, including package updates, downtime resolution, and system hardening.</li>
 </ul>
 
-<div class="dates">August 2022 - March 2024</div>
 <p class="job-title">Software Engineer II</p>
 <p class="company">Assured Information Security (AIS)</p>
+<p class="dates">August 2022 - March 2024</p>
 <ul>
   <li>Diagnosed and resolved hardware-integration, kernel, and system-level issues in hardened Linux environments.</li>
   <li>Completed and booted into Linux From Scratch (LFS) as part of an onboarding challenge.</li>
@@ -153,9 +154,9 @@ li {
   <li>Automated GRUB bootloader configuration, filesystem validation, and recovery workflows via Perl scripting.</li>
 </ul>
 
-<div class="dates">July 2020 - August 2022</div>
 <p class="job-title">Computer Scientist</p>
 <p class="company">United States Air Force</p>
+<p class="dates">July 2020 - August 2022</p>
 <ul>
   <li>Diagnosed and resolved mission-system data processing issues in secure Air Force environments.</li>
   <li>Implemented updated communication logic for secure aviation software systems integrating with modern radio hardware.</li>
@@ -171,16 +172,16 @@ li {
 </ul>
 
 <h2>Education</h2>
-<div class="dates">Expected: December 2025</div>
 <div  class="education-block">
   <p><strong>Southern Arkansas University</strong></p>
   <p>M.S. in Computer and Information Science</p>
+  <p>Expected: December 2025</p>
 </div>
 
-<div class="dates">April 2020</div>
 <div  class="education-block">
   <p><strong>Utah Valley University</strong></p>
   <p>B.S. in Computer Science (GPA: 3.6 / 4.0)</p>
+  <p>April 2020</p>
 </div>
 
 </body>
