tailor resume to ais devops role
Signed-off-by: Reed McFadden <reed.mcfadden@gmail.com>

--- a/index.html
+++ b/index.html
@@ -83,13 +83,14 @@ li {
 <div class="meta">Active TS/SCI • linkedin.com/in/reed-mcfadden • github.com/reedmcfadden • reedmcfadden.github.io/resume</div>
 
 <h2>Summary</h2>
-<p><p>RHCE-certified Linux Engineer with TS/SCI clearance, specializing in secure RHEL enterprise environments, Linux automation, DISA STIG compliance, and classified infrastructure operations. Experienced with Ansible, Satellite/IDM, SELinux policy management, enclave patching workflows, and virtualization platforms. Focused on strengthening mission-critical systems through hardening, configuration automation, and reliable RHEL lifecycle management.</p>
+<p>RHCE-certified Linux Engineer with TS/SCI clearance, specializing in secure RHEL enterprise environments, automation, and STIG compliance. Experienced with Ansible, virtualization platforms, Satellite/IDM, and secure enclave operations. Actively expanding skills in Terraform, Kubernetes, and CI/CD tooling to support modern DevSecOps engineering environments.</p>
 
 <h2>Technical Skills</h2>
 <ul>
   <li>RHCE, RHCSA, Security+, Linux+, AWS Cloud Practitioner</li>
-  <li>Linux (RHEL, Rocky), virtualization (vSphere, ESXi, KVM, Proxmox), containers (Docker, Podman)</li>
-  <li>Infrastructure-as-Code: Ansible, Terraform, YAML, Git, Bash, Perl</li>
+  <li>Linux (RHEL, Rocky), virtualization (vSphere, ESXi, KVM, Proxmox)</li>
+  <li>Infrastructure-as-Code: Ansible, Terraform (learning), YAML, Git, Bash, Perl</li>
+  <li>Containers/Orchestration: Docker, Podman, Kubernetes (learning)</li>
   <li>CI/CD: Understanding of Git-based workflows, pipeline concepts, and automated testing integration</li>
   <li>AWS (EC2, IAM, S3 basics; foundational cloud familiarity)</li>
   <li>Enclave Operations: classified/unclassified RHEL environments, patch baselines, compliance reporting, secure change control</li>
@@ -163,12 +164,13 @@ li {
   <li>Built automated unit and integration tests using C++ and Google Test to reduce manual testing overhead.</li>
 </ul>
 
-<h2>DevOps & Cloud Projects</h2>
+<h2>Projects</h2>
 <ul>
-  <li>Built automated RHEL/Rocky Linux provisioning and configuration workflows using <strong>Ansible</strong> roles and playbooks to replicate enclave automation patterns in a lab environment.</li>
-  <li>Created Linux hardening and compliance scripts to practice DISA STIG, SCAP, and SELinux policy automation in a controlled environment.</li>
-  <li>Created CI/CD pipelines using <strong>GitHub Actions</strong> to lint and validate infrastructure code, run automated tests, and publish versioned build artifacts.</li>
-  <li>Built Linux automation scripts (Bash, Python) to reduce manual toil for patching, log management, system validation, and recurring maintenance tasks.</li>
+  <li>Created CI/CD pipelines using <strong>GitHub Actions</strong> to generate resume pdf and GitHub Pages website.</li>
+  <li>Deployed Rocky Linux VMs and used SCAP/OSCAP tooling to scan against DISA STIG benchmarks, practicing remediation and verification of security findings.</li>
+  <li>Developed Ansible playbooks to harden Linux systems (e.g., disabling Wi-Fi/Bluetooth, removing unnecessary packages, tightening local security settings).</li>
+  <li>Installed and administered a Proxmox VE host to run Rocky Linux VMs for lab, testing, and security-hardening scenarios.</li>
+  <li>Actively building hands-on experience with Terraform, Kubernetes, and GitLab CI/CD through homelab automation projects to expand DevOps proficiency.</li>
 </ul>
 
 <h2>Education</h2>
